2000-07-13  Christopher James Lahey  <clahey@helixcode.com>

	* Makefile.am: Switched the order of compilation of printing and
	contact-editor.

	* contact-editor/Makefile.am: Added printing libraries and a
	confirm delete dialog glade file.

	* contact-editor/e-contact-editor.c,
	contact-editor/e-contact-editor.h: Enabled the delete and print
	functions as well as providing a confirm delete dialog to the
	outside world.

	* gui/component/addressbook.c: Made the delete button on new cards
	active.

	* gui/minicard/Makefile.am: Added printing libraries to a number
	of test programs.

	* gui/minicard/e-minicard.c: Added print and delete to the right
	click menu.  Made the delete button on the card editor active.

	* printing/e-contact-print.c, printing/e-contact-print.h: Added a
	function to print a single card.

2000-07-12  Chris Toshok  <toshok@helixcode.com>

	* gui/component/e-ldap-storage.c (ldap_server_foreach): oops.  fix
	typo that was saving the port in the rootdn spot.
	(save_ldap_data): make this a bit safer - writing to a new file
	and renaming it.
	(load_ldap_data): make this a bit smarter - if parsing the
	ldapservers.xml file fails and there's a .new file there,
	rename it.
	
2000-07-12  Christopher James Lahey  <clahey@helixcode.com>

	* backend/pas/pas-backend-file.c: Do case insensitive compares.

	* addressbook/gui/component/addressbook.c: Make quick search
	search both name and company name.

2000-07-12  Christopher James Lahey  <clahey@helixcode.com>

	* contact-editor/e-contact-editor.c: Add icons to the toolbars.

2000-07-12  Christopher James Lahey  <clahey@helixcode.com>

	* contact-editor/Makefile.am: Added installation of arrow.png.

	* contact-editor/e-contact-editor.c: Use EVOLUTIONDIR #define.

2000-07-11  Christopher James Lahey  <clahey@helixcode.com>

	* gui/component/addressbook.c: Removed an unused function

2000-07-10  Dan Winship  <danw@helixcode.com>

	* gui/component/select-names/Makefile.am (EXTRA_DIST): add idl