@@ -1,0 +1,9 @@
+/*
+ * Translatable strings file generated by Glade.
+ * Add this file to your project's POTFILES.in.
+ * DO NOT compile it as part of your application.
+ */
+
+gchar *s = N_("Are you sure you want\n"
+              "to delete this contact?");
+gchar *s = N_("Delete Contact?");
