@@ -1,5 +1,11 @@
 2000-07-13  Christopher James Lahey  <clahey@helixcode.com>
 
+	* contact-editor/e-contact-editor-confirm-delete.glade,
+	contact-editor/e-contact-editor-confirm-delete.glade.h: Added
+	these.
+
+2000-07-13  Christopher James Lahey  <clahey@helixcode.com>
+
 	* Makefile.am: Switched the order of compilation of printing and
 	contact-editor.
 
